--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/AjouterRecette.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/AjouterRecette.cshtml
@@ -31,6 +31,7 @@
     </div>
     <form method="post" asp-controller="Recette" asp-action="AjouterRecettePost" enctype="multipart/form-data">
         <div class="row RecetteLine">
+            <div><h3 class="Recette">Informations : </h3></div>
             <div class="col-lg-8">
 
                 <label>Veuillez saisir le nom de la recette : </label>
@@ -89,7 +90,7 @@
         </div>
 
         <div class="row RecetteLine">
-
+            <div><h3 class="Recette">Ingrédients : </h3></div>
             <label>Veuillez saisir la liste des ingrédients : </label>
             <div class="row1">
                 <textarea value="@Model.Ingredient" name="ingredient" class="form-control" placeholder="Liste d'ingrédients"> </textarea>
@@ -97,6 +98,7 @@
             </div>
         </div>
         <div class="row RecetteLine">
+            <div><h3 class="Recette">Réalisation : </h3></div>
             <label>Veuillez saisir les étapes de la réalisation : </label>
             <div class="row1">
                 <textarea value="@Model.Realisation" name="realisation" class="form-control" placeholder="Description de la réalisation"> </textarea>
@@ -105,8 +107,8 @@
 
         <div class="row RecetteLine">
             <div class="row1">
-                <div class="text-center">
-                    <button type="submit">Ajouter</button>
+                <div class="TitreCentrer">
+                    <button type="submit">Ajouter la Recette</button>
                 </div>
             </div>            
         </div>
