--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Shared/_layoutFicheRecette.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Shared/_layoutFicheRecette.cshtml
@@ -20,15 +20,10 @@
                 @*<a asp-area="" asp-controller="Recette" asp-action="ListeRecette" class=""><img src="~/images/logo.png" /></a>*@
                 <div class="row barreBouton">
                     <div class="col-lg-offset-2"></div>
-                    @if (ViewBag.Admin == true)
-                    {
-                        <div class="col-lg-offset-1 col-lg-1 barreBouton">
-                            <a asp-area="" asp-controller="Utilisateur" asp-action="ListeUtilisateurs">Utilisateurs</a>
-                        </div>
-                        <div class="col-lg-1 barreBouton">
-                            <a asp-area="" asp-controller="Recette" asp-action="AjouterCategorie">Catégories</a>
-                        </div>
-                    }
+                    @*@if (ViewBag.Admin == true)
+        {
+
+        }*@
 
                     @if (ViewBag.Logged == true)
                     {
@@ -38,7 +33,12 @@
                         <div class="col-lg-2 barreBouton">
                             <a asp-area="" asp-controller="Recette" asp-action="AjouterRecette">Ajouter une Recettes</a>
                         </div>
-
+                        <div class="col-lg-offset-1 col-lg-1 barreBouton">
+                            <a asp-area="" asp-controller="Utilisateur" asp-action="ListeUtilisateurs">Utilisateurs</a>
+                        </div>
+                        <div class="col-lg-1 barreBouton">
+                            <a asp-area="" asp-controller="Recette" asp-action="AjouterCategorie">Catégories</a>
+                        </div>
                         <div class="col-lg-offset-2 col-lg-3">
                             <span class="UserInfo">@ViewBag.nom - </span><a asp-controller="Utilisateur" asp-action="LogOut"> Se Déconnecter</a>
                         </div>
