--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Utilisateur/Index.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Utilisateur/Index.cshtml
@@ -1,46 +1,47 @@
 ﻿@using FicheRecette.Model;
 
 
-
-<div class="col-md-12">
-    <div class="Titre"><h1>Fiche Recette V1.0a</h1></div>
-    <div class="col-md-4">
-        <div classe="row">
-            <h2>Création de l'application.</h2>
-             <ul>
-                <li>Conception et réalisation par Anthony Di-persio</li>
-                <li>Cette application a été crée avec Microsoft® ASP.NET Core MVC</li>
-                <li>Totalement novice en programmation j'ai suivi une formation chez <a href="https://https://www.m2iformation.fr">M2i.</a></li>
-                <li>Si vous souhaitez suivre l'évolution de mes compétences ou encore ne savoir plus sur mon parcour,suivez: <a href="http://a.dipersio.free.fr">Ma page perso.</a></li>
-            </ul>
+<div class="Container Recette">
+    
+        <div class="Titre">
+            <h2>Fiche Recette V1.0a</h2>
         </div>
-    </div>
-    <div class="col-md-4">
-        <div classe="wrapper">
-            <h2>Comment l'utiliser?</h2>
-            <ul>
-                <li>Pour utiliser FicheRecette, cliquez sur "se connecter". </li>
-                <li>Vous devez vous enregistrer. Pour cela complétez les champs dans la section "s'inscrire"</li>
-                <li>Une fois l'enregistrement terminé vous avez acces au menu.</li>
-                <li>La section "Liste de recettes" vous donne une vues d'ensemble de votre livre de recette</li>
-                <li>Vous pouvez afficher les détails d'une recette ou utiliser le filtre de tri afin de l'affiner.</li>
-            </ul>
+    
+    <div class="row RecetteLine">
+        <div class="col-md-4">
+            <h3 class="TitreCentrer">Création de l'application.</h3>
+            <div classe="row1">
+                <ul>
+                    <li>Conception et réalisation par Anthony Di-persio</li>
+                    <li>Cette application a été crée avec Microsoft® ASP.NET Core MVC</li>
+                    <li>Totalement novice en programmation j'ai suivi une formation chez <a href="https://https://www.m2iformation.fr">M2i.</a></li>
+                    <li>Si vous souhaitez suivre l'évolution de mes compétences ou encore en savoir plus sur mon parcours, suivez: <a href="http://a.dipersio.free.fr">Ma page perso.</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
-    <div class="col-md-4">
-        <div classe="wrapper">
-            <h2>Un e-Livre de recette?</h2>
+        <div class="col-md-4">
+            <h3 class="TitreCentrer">Comment l'utiliser?</h3>
+            <div classe="row1">
+                <ul>
+                    <li>Pour utiliser FicheRecette, cliquez sur "se connecter". </li>
+                    <li>Vous devez vous enregistrer. Pour cela complétez les champs dans la section "s'inscrire"</li>
+                    <li>Une fois l'enregistrement terminé vous avez acces au menu.</li>
+                    <li>La section "Liste de recettes" vous donne une vues d'ensemble de votre livre de recette</li>
+                    <li>Vous pouvez afficher les détails d'une recette ou utiliser le filtre afin de l'affiner.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <h3 class="TitreCentrer">Un e-Livre de recette?</h3>
+            <div classe="row1">
                 <ul>
                     <li>Exactement! C'est Votre e-Livre de recette! Pour cela, ajoutez vos recettes personnelles dans la section "Ajouter une Recette".</li>
                     <li>Vous pouvez ajouter vos propre photos afin de personnaliser les recettes</li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>            
+                    <li>Vous disposerez toujours de vos meilleures recette à portée de click!</li>
+                    <li>FicheRecette s'adapte parfaitement à votre réseau ainsi vos contacts et amis pourront partager avec vous tous leurs secrets culinaires.</li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
-<footer>
 
-
-</footer>
