MAJ BDD - Script Injection 10 Recettes

--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Utilisateur/Index.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Utilisateur/Index.cshtml
@@ -4,7 +4,7 @@
 <div class="Container Recette">
     
         <div class="Titre">
-            <h2>Fiche Recette V1.01a</h2>
+            <h2>Fiche Recette V1.01b</h2>
         </div>
     
     <div class="row RecetteLine">
