--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/Detail.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/Detail.cshtml
@@ -35,7 +35,7 @@
                                     @if (@ViewBag.Nom == "Admin")
                                     {
                                         <div class="col-lg-6">
-                                            <button class="TitreCentrer" type="submit"><a asp-action="" asp-controller="Recette" asp-route-id="@r.Id">Modifier</a></button>
+                                            <button class="TitreCentrer" type="submit"><a asp-action="ModifierRecette" asp-controller="Recette" asp-route-id="@r.Id">Modifier</a></button>
                                         </div>
                                         <div class="col-lg-6">
                                             <button class="TitreCentrer" type="submit"><a asp-action="SupprimerRecette" asp-controller="Recette" asp-route-id="@r.Id">Supprimer</a></button>
@@ -45,7 +45,7 @@
                                     {
 
                                         <div class="col-lg-6">
-                                            <button class="TitreCentrer" type="submit"><a asp-action="" asp-controller="Recette" asp-route-id="@r.Id">Modifier</a></button>
+                                            <button class="TitreCentrer" type="submit"><a asp-action="ModifierRecette" asp-controller="Recette" asp-route-id="@r.Id">Modifier</a></button>
                                         </div>
                                         <div class="col-lg-6">
                                             <button class="TitreCentrer" type="submit"><a asp-action="SupprimerRecette" asp-controller="Recette" asp-route-id="@r.Id">Supprimer</a></button>
