--- a/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/ModifierRecette.cshtml
+++ b/FicheRecetteASP_NET_Core_MCV/FicheRecette/Views/Recette/ModifierRecette.cshtml
@@ -1,8 +1,8 @@
-﻿@using FicheRecette.Model
+﻿@using FicheRecette.Model;
 
 <div class="Container Recette">
     <div class="Titre">
-        <h2>Ajouter une Recette</h2>
+        <h2>Modifier une Recette</h2>
     </div>
 
     <div class="errors">
@@ -25,23 +25,25 @@
                             </div>
                         </div>
                     </div>
-                }}
+                }
+            }
         </div>
     </div>
-    <form method="post" asp-controller="Recette" asp-action="AjouterRecettePost" enctype="multipart/form-data">
+
+    <form method="post" asp-controller="Recette" asp-action="ModifierRecettePost" enctype="multipart/form-data" model="List<Recette>InfoRecette">
         <div class="row RecetteLine">
             <div><h3 class="Recette">Informations : </h3></div>
             <div class="col-lg-8">
 
-                <label>Veuillez saisir le nom de la recette : </label>
+                <label>Veuillez vérifier le nom de la recette : </label>
                 <div class="row1">
-                    <input type="text" class="form-control" value="@Model.NomRecette" name="nomRecette" />
+                    <input type="text" class="form-control" value="@Model.NomRecette" name="NomRecette" />
                 </div>
             </div>
             <div class="col-lg-4">
-                <label>Choisissez la catégorie : </label>
+                <label>Vérifiez la catégorie : </label>
                 <div class="row1">
-                    <select name="NomCategory" class="form-control">
+                    <select name="NomCategory" class="form-control" value="@Model.NomCategory">
                         <option></option>
                         @foreach (Category c in (ViewBag.Liste as List<Category>))
                         {
@@ -69,7 +71,7 @@
             </div>
             <div class="col-lg-4">
 
-                <label>Choisissez la difficulté : </label>
+                <label>Vérifiez la difficulté : </label>
                 <select class="selectpicker" name="Difficulte" size="1" value="@Model.Difficulte">
                     <option value="*">*</option>
                     <option value="**">**</option>
@@ -80,7 +82,7 @@
                 </select>
             </div>
             <div class="col-lg-4">
-                <label>Ajouter une image : </label>
+                <label>Modifier l'image : </label>
                 <div class="row1">
                     <input type="file" name="images" multiple placeholder="Les images de la recette" class="form-control" />
                 </div>
@@ -90,26 +92,27 @@
 
         <div class="row RecetteLine">
             <div><h3 class="Recette">Ingrédients : </h3></div>
-            <label>Veuillez saisir la liste des ingrédients : </label>
+            <label>Veuillez vérifier la liste des ingrédients : </label>
             <div class="row1">
-                <textarea value="@Model.Ingredient" name="ingredient" class="form-control" placeholder="Liste d'ingrédients"> </textarea>
+                <textarea value="@Model.Ingredient" name="ingredient" class="form-control" placeholder="Liste d'ingrédients">@Model.Ingredient</textarea>
 
             </div>
         </div>
         <div class="row RecetteLine">
             <div><h3 class="Recette">Réalisation : </h3></div>
-            <label>Veuillez saisir les étapes de la réalisation : </label>
+            <label>Veuillez vérifier les étapes de la réalisation : </label>
             <div class="row1">
-                <textarea value="@Model.Realisation" name="realisation" class="form-control" placeholder="Description de la réalisation"> </textarea>
+                <textarea value="@Model.Realisation" name="realisation" class="form-control" placeholder="Description de la réalisation">@Model.Realisation</textarea>
             </div>
         </div>
 
         <div class="row RecetteLine">
             <div class="row1">
                 <div class="TitreCentrer">
-                    <button type="submit">Ajouter la Recette</button>
+                    <button type="submit">Modifier la Recette</button>
                 </div>
-            </div>            
+            </div>
         </div>
     </form>
+    }
 </div>
